--- a/style.css
+++ b/style.css
@@ -38,5 +38,28 @@ footer {
 .flex-row {
   display: flex;
   align-items: flex-start;
-  gap: 40px; /* space between image and text */
+  gap: 40px;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+}
+
+#lga-seifa-output {
+  font-size: 1rem;
+  margin-top: 20px;
+  text-align: center;
+}
+
+#lga-search {
+  text-align: center;
+}
+
+.filter-narration {
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
 }
