--- a/style.css
+++ b/style.css
@@ -45,21 +45,30 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 30px;
-  align-items: center;
+  justify-content: space-between;
+  align-items: stretch;
 }
 
-#lga-seifa-output {
-  font-size: 1rem;
-  margin-top: 20px;
-  text-align: center;
-}
-
+#lga-seifa-output,
 #lga-search {
+  font-size: 18px;
+  margin: 5px 0;
   text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .filter-narration {
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: 1.5rem;
   text-align: center;
+  margin: 10px 0;
+}
+
+.interactive-box {
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  padding: 15px;
+}
+
+p {
+  font-size: 18px;
 }
